     is called and ends up updating the timer daemon would be passed into
     the timer. Also a `START-TIMER-SHARED` operation was added, to track a
     single named timer for possibly many devices and/or event types -- in
     this case they would be comma-separated in the environment variable
     values. [issue #3092, PR #3097]

 - `configure` script options:
   * Introduced `--with-python{,2,3}-modules-dir` to specify PyNUT(Client)
     module installation location (for module-named dir to be created under
     it), if not bundling with NUT-Monitor UI app. By default the respective
     interpreter's 'site-packages' or 'dist-packages' location will be used,
     so you may have to adjust search paths for any other values. [#3062]

 - Fixed CI recipes for PyPI publication of PyNUT(Client) module to also
   include the source distribution (was posted for NUT v2.8.1 and v2.8.2
   tagged releases, but absent for v2.8.3 and v2.8.4). [#3056]

 - Updated `make spellcheck` to help avoid asciidoc admonition blocks with
   visually invalid sentences (after rendering as a box in HTML or PDF). [#3077]


Release notes for NUT 2.8.4 - what's new since 2.8.3
----------------------------------------------------

 - Bug fixes for fallout possible due to "fightwarn" effort in 2.8.0+:
   * In `usbhid-ups` sources, introduced optional `HU_FLAG_PARAM_REQUIRED` for
     `setvar()` or `instcmd()` handling (and a `HU_TYPE_CMD_PARAM_REQUIRED`
     shortcut) for setting in the mapping table flags, to specify variables
     or instant commands that require an argument (either from caller or a
     non-`NULL` default in the run-time table after device data discovery);
     if the flag is not set, a zero value is assumed. Incomplete code was a
     regression of NUT v2.8.3 causing some instant commands to fail. [#2860,
     #2955]

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1 and/or v2.8.2 and/or
   v2.8.3: