@@ -3,6 +3,19 @@
 # NOTE: Contents of this file should be pure ASCII (character codes
 # not in range would be ignored with a warning message).
 #
+
+# ============================================================================
+# DEBUG_MIN <num>
+#
+# Optionally specify a minimum debug level for `upssched` daemon or client,
+# e.g. for troubleshooting a deployment without a need to edit consumer
+# configuration.
+# Note that command-line option `-D` can only increase this verbosity level.
+# Also note that the configuration file is processed line by line, so you
+# may want to set this option early on.
+#
+# DEBUG_MIN 6
+
 # ============================================================================
 #
 # CMDSCRIPT <scriptname>
